(library
 (name sexp_parse)
 (public_name sexp-parse)
 (libraries compiler-libs.common menhirLib sexplib0))

(ocamllex sexp_lexer)

(ocamllex sexp0_lexer)

(menhir
 (infer false)
 (flags
  :standard
  --lalr
  --strict
  --fixed-exception
  --table
  --strategy
  simplified)
 (modules sexp_parser))

(menhir
 (infer false)
 (flags
  :standard
  --lalr
  --strict
  --fixed-exception
  --table
  --strategy
  simplified)
 (modules sexp0_parser))
